add modified file index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> E.A hospital </title>
+  <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!--<main>
+      <section class="first">-->
+    <nav class="container">
+      <a href="javascript :;"> APP   | </a>
+      <a href="javascript :;"> ARCHIVE   | </a>
+      <a href="javascript :;"> CONTACT  | </a>
+    <!--  <div class="clear"></div>-->
+      <p id="lang"> LANGUAGES | <a href="javascript :;">ENG</a></p>
+    </nav>
+  <section class="first">
+<div class="container2" >
 
+  <img src="img/h111.jpg"  alt="e.a hospital" class="im" >
+
+</div></section>
+<nav class="container-1">
+  <a href="javascript :;" class="E-A1"> SECTIONS </a>
+  <a href="javascript :;"class="E-A1"> NEWS </a>
+  <a href="javascript :;"class="E-A1"> VISIT </a>
+  <a href="javascript :;"class="E-A1"> SITES </a>
+<div class="aa">  <a href="javascript :;"class="E-A2"> BOOKING ONLINE </a></div>
+  </nav>
+  <section class="service">
+    <!--  <img src="img/h1.jpg" class="img1">-->
+    <div class="sec-serv">
+
+      <h5 class="web-serv" style="color: 	#191970"> WEBSITE SERVICES </h5>
+      <ul>
+        <li><a href="javascript:;" class="list1">Adverts</a></li>
+        <li><a href="javascript:;" class="list1">pictures</a></li>
+        <li><a href="javascript:;" class="list1">Suggestions and Complains</a></li>
+        <li><a href="javascript:;" class="list1">Statics and Reports</a></li>
+      </ul>
+
+    </div>
+  </section>
+
+<!--<div class="clear"></div>
+<div class="container3">
+  <img src="img/hb.jpeg"  height="260">
+<p > E.A <br> HOSPITAL </p>-->
+<!--</section>
+</main>-->
   </body>
+  <footer >
+    <p> Contact information <a href="javascript:;"> E.A@example.com</a></p>
+   </footer>
 </html>
